--- a/Python.ipynb
+++ b/Python.ipynb
@@ -878,9 +878,7 @@
   {
    "cell_type": "markdown",
    "id": "8052a300-d271-427a-901e-6d13d6bf6c63",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# **3. Data types in python**"
    ]
@@ -2209,9 +2207,7 @@
   {
    "cell_type": "markdown",
    "id": "3db256e3-4a87-4633-90b6-cdfc38eee7c8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# **4. Operators**"
    ]
@@ -2565,9 +2561,7 @@
   {
    "cell_type": "markdown",
    "id": "755a1492-8b5d-4bd1-8145-dfb324ca80c3",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# **5. Control Statements**"
    ]
@@ -3291,12 +3285,120 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d39ffb6d-cc99-41e4-a96e-950dc0637c01",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **6. Functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b5067e7-f221-4cfa-847a-386ba196f41e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014cb7e3-8f14-40a6-811d-aa906a20cdf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71787e6f-e88a-4104-8609-b71d108c0e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "811364a8-9d80-423b-8863-0fcae1a0ccfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a88ffb3-fd57-4a83-bbd4-a8ce97032628",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2d5117-4efa-4efa-bdfd-012613a0cda4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620a99bc-384e-4251-9e22-cc97f19f12d2",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **7. Lambda Functions, Decorators and Generators**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e23e8fc2-76d8-4d7a-993b-9c5a18fda66c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca9269ca-bc3e-49b3-a050-c256bada639a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97e3c224-f256-4db2-b4cf-ffc7439a8a40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "309373e4-6d5c-41a5-8988-642ea9e7da0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8457afdb-752f-4ce7-9bed-7c82ab08c339",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "e6d9baa3-80c0-4e75-8468-18437ede2aea",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# **6. Strings and Characters**"
+    "# **8. Strings and Characters**"
    ]
   },
   {
@@ -3591,9 +3693,11 @@
   {
    "cell_type": "markdown",
    "id": "3f713b88-c5db-4c3a-bdca-29720c225e54",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# **7. Lists and Tuples**"
+    "# **9. Lists and Tuples**"
    ]
   },
   {
@@ -3920,7 +4024,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# **8. Sets**"
+    "# **10. Sets**"
    ]
   },
   {
@@ -4164,7 +4268,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# **9. Dictionary**"
+    "# **11. Dictionary**"
    ]
   },
   {
@@ -4291,94 +4395,7 @@
     "    print(f\"{key}: {value}\")  # Outputs: a: 1, b: 2, c: 3\n",
     "```\n",
     "\n",
-    "---\n",
-    "\n",
-    "### **Sorting the Elements of a Dictionary using Lambdas**\n",
-    "\n",
-    "Sort by keys or values using `sorted()`.\n",
-    "\n",
-    "**Example**:\n",
-    "```python\n",
-    "d = {\"a\": 3, \"b\": 1, \"c\": 2}\n",
-    "\n",
-    "# Sorting by keys\n",
-    "sorted_by_keys = dict(sorted(d.items(), key=lambda x: x[0]))\n",
-    "print(sorted_by_keys)  # {'a': 3, 'b': 1, 'c': 2}\n",
-    "\n",
-    "# Sorting by values\n",
-    "sorted_by_values = dict(sorted(d.items(), key=lambda x: x[1]))\n",
-    "print(sorted_by_values)  # {'b': 1, 'c': 2, 'a': 3}\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### **Converting Lists into a Dictionary**\n",
-    "\n",
-    "Convert two lists into a dictionary using `zip()`.\n",
-    "\n",
-    "**Example**:\n",
-    "```python\n",
-    "keys = [\"a\", \"b\", \"c\"]\n",
-    "values = [1, 2, 3]\n",
-    "d = dict(zip(keys, values))\n",
-    "print(d)  # {'a': 1, 'b': 2, 'c': 3}\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### **Converting Strings into a Dictionary**\n",
-    "\n",
-    "Convert a string representation of a dictionary using `eval()` or JSON.\n",
-    "\n",
-    "**Example**:\n",
-    "```python\n",
-    "import json\n",
-    "\n",
-    "# Using eval (use cautiously)\n",
-    "string_dict = \"{'a': 1, 'b': 2}\"\n",
-    "d = eval(string_dict)\n",
-    "print(d)  # {'a': 1, 'b': 2}\n",
-    "\n",
-    "# Using JSON\n",
-    "string_dict = '{\"a\": 1, \"b\": 2}'\n",
-    "d = json.loads(string_dict)\n",
-    "print(d)  # {'a': 1, 'b': 2}\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### **Passing Dictionaries to Functions**\n",
-    "\n",
-    "Dictionaries can be passed as arguments to functions, and `**` can unpack key-value pairs.\n",
-    "\n",
-    "**Example**:\n",
-    "```python\n",
-    "def greet(name, age):\n",
-    "    print(f\"Hello, {name}. You are {age} years old.\")\n",
-    "\n",
-    "data = {\"name\": \"Alice\", \"age\": 25}\n",
-    "greet(**data)  # Output: Hello, Alice. You are 25 years old.\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### **Ordered Dictionaries**\n",
-    "\n",
-    "An **OrderedDict** is a subclass of `dict` in the `collections` module that maintains the insertion order of keys (before Python 3.7, this was not guaranteed in regular dictionaries).\n",
-    "\n",
-    "**Example**:\n",
-    "```python\n",
-    "from collections import OrderedDict\n",
-    "\n",
-    "d = OrderedDict()\n",
-    "d[\"a\"] = 1\n",
-    "d[\"b\"] = 2\n",
-    "d[\"c\"] = 3\n",
-    "\n",
-    "print(d)  # OrderedDict([('a', 1), ('b', 2), ('c', 3)])\n",
-    "```\n",
-    "\n",
-    "---"
+    "---\n"
    ]
   },
   {
@@ -4534,10 +4551,134 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57490b4-4dac-43a8-900f-9a99867f228b",
+   "id": "4d98455e-ab6c-4faf-9759-690adcedb753",
    "metadata": {},
    "source": [
-    "# **9.1 Difference between List, Tuple, Sets and Dictionary**"
+    "\n",
+    "### **Sorting the Elements of a Dictionary using Lambdas**\n",
+    "\n",
+    "Sort by keys or values using `sorted()`.\n",
+    "\n",
+    "**Example**:\n",
+    "```python\n",
+    "d = {\"a\": 3, \"b\": 1, \"c\": 2}\n",
+    "\n",
+    "# Sorting by keys\n",
+    "sorted_by_keys = dict(sorted(d.items(), key=lambda x: x[0]))\n",
+    "print(sorted_by_keys)  # {'a': 3, 'b': 1, 'c': 2}\n",
+    "\n",
+    "# Sorting by values\n",
+    "sorted_by_values = dict(sorted(d.items(), key=lambda x: x[1]))\n",
+    "print(sorted_by_values)  # {'b': 1, 'c': 2, 'a': 3}\n",
+    "```\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a39a6a98-dec4-4d7d-89a2-5a68e6850a78",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Converting Lists into a Dictionary**\n",
+    "\n",
+    "Convert two lists into a dictionary using `zip()`.\n",
+    "\n",
+    "**Example**:\n",
+    "```python\n",
+    "keys = [\"a\", \"b\", \"c\"]\n",
+    "values = [1, 2, 3]\n",
+    "d = dict(zip(keys, values))\n",
+    "print(d)  # {'a': 1, 'b': 2, 'c': 3}\n",
+    "```\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "130a6790-7290-417f-9986-bcd14ad2cda8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Converting Strings into a Dictionary**\n",
+    "\n",
+    "Convert a string representation of a dictionary using `eval()` or JSON.\n",
+    "\n",
+    "**Example**:\n",
+    "```python\n",
+    "import json\n",
+    "\n",
+    "# Using eval (use cautiously)\n",
+    "string_dict = \"{'a': 1, 'b': 2}\"\n",
+    "d = eval(string_dict)\n",
+    "print(d)  # {'a': 1, 'b': 2}\n",
+    "\n",
+    "# Using JSON\n",
+    "string_dict = '{\"a\": 1, \"b\": 2}'\n",
+    "d = json.loads(string_dict)\n",
+    "print(d)  # {'a': 1, 'b': 2}\n",
+    "```\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaa18b21-b35c-416e-9dc2-2b01fb0477c4",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Passing Dictionaries to Functions**\n",
+    "\n",
+    "Dictionaries can be passed as arguments to functions, and `**` can unpack key-value pairs.\n",
+    "\n",
+    "**Example**:\n",
+    "```python\n",
+    "def greet(name, age):\n",
+    "    print(f\"Hello, {name}. You are {age} years old.\")\n",
+    "\n",
+    "data = {\"name\": \"Alice\", \"age\": 25}\n",
+    "greet(**data)  # Output: Hello, Alice. You are 25 years old.\n",
+    "```\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc45ae8-0174-490e-a3d7-297a1dba4527",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Ordered Dictionaries**\n",
+    "\n",
+    "An **OrderedDict** is a subclass of `dict` in the `collections` module that maintains the insertion order of keys (before Python 3.7, this was not guaranteed in regular dictionaries).\n",
+    "\n",
+    "**Example**:\n",
+    "```python\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "d = OrderedDict()\n",
+    "d[\"a\"] = 1\n",
+    "d[\"b\"] = 2\n",
+    "d[\"c\"] = 3\n",
+    "\n",
+    "print(d)  # OrderedDict([('a', 1), ('b', 2), ('c', 3)])\n",
+    "```\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e57490b4-4dac-43a8-900f-9a99867f228b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **11.1 Difference between List, Tuple, Sets and Dictionary**"
    ]
   },
   {
@@ -4557,6 +4698,14 @@
     "\n",
     "---\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "704c6dd0-3d8f-487b-92ee-0bc1b42589fc",
+   "metadata": {},
+   "source": [
     "### 2. **Tuple**\n",
     "- **Definition**: Ordered, immutable collection of elements.\n",
     "- **Syntax**: `(1, 2, 3)`\n",
@@ -4566,7 +4715,14 @@
     "  - Cannot be modified after creation (immutable).\n",
     "  - Useful for fixed data (e.g., coordinates, configuration settings).\n",
     "\n",
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3af41d00-1e1e-4fad-b8dd-d0c2cf39f9c9",
+   "metadata": {},
+   "source": [
     "\n",
     "### 3. **Set**\n",
     "- **Definition**: Unordered, mutable collection of unique elements.\n",
@@ -4576,7 +4732,14 @@
     "  - No indexing or ordering.\n",
     "  - Useful for membership testing and mathematical operations like union, intersection.\n",
     "\n",
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dab52bb-f195-42f2-8804-5ca724e73a05",
+   "metadata": {},
+   "source": [
     "\n",
     "### 4. **Dictionary**\n",
     "- **Definition**: Unordered, mutable collection of key-value pairs.\n",
@@ -4586,7 +4749,14 @@
     "  - Keys are used for indexing.\n",
     "  - Efficient for lookups and data mapping.\n",
     "\n",
-    "---\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "541a2697-558f-4a6b-a42b-503882d1d89a",
+   "metadata": {},
+   "source": [
     "\n",
     "### Summary Table\n",
     "\n",
@@ -4595,8 +4765,190 @@
     "| **Order**         | Ordered           | Ordered           | Unordered         | Unordered            |\n",
     "| **Mutable**       | Yes               | No                | Yes               | Yes                  |\n",
     "| **Duplicates**    | Allowed           | Allowed           | Not allowed       | Keys: No, Values: Yes|\n",
-    "| **Indexing**      | Supported         | Supported         | Not supported     | Keys act as indexes  |\n"
+    "| **Indexing**      | Supported         | Supported         | Not supported     | Keys act as indexes  |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1a267c1-051e-451b-baa5-da9653293ea9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **12. OOPS: Object oriented programming structures**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91720854-42c9-4d71-b3bf-4cc4bc05b234",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b59cd5c6-c752-4bf7-8237-356977bb3e8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd1e31e1-0fc7-43d3-9402-3532d02584b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb86a87-66e6-486b-ba64-825b4fcb8367",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0a2656b-133b-4565-bf3f-3ec957520d56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20065717-173e-4ff5-9de7-cf45b1760865",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "544d5d74-3b58-42b1-84bb-216cfee12f7a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **13. Inheritence and polymorphism**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845eaefa-b119-4cbb-b92d-6810a8d84a60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "474b78c4-2965-49fe-b357-7471d846aea0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10178275-bb18-4109-b1bf-4d77f7b31750",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8db33149-cdbc-48ac-8867-bca350028878",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967d231a-9e8f-4750-9a57-e38689d41370",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e419b229-4060-489d-af08-3b186c69b032",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd3f61f4-7114-437f-a9a8-e74779c66046",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **14. Modules and Packages**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f01ac47c-a6ed-430c-b526-64c00ec15446",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ac33412-9ff4-49ef-87ee-e84a67638037",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be194f2c-6e62-4279-816c-b0bd4f6ef3b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dfeb5b1-0ba5-4cce-a1b8-a9a698fccbb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9550680d-c9d6-4e65-8d40-5a409100a03f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d889f30-a8b4-477f-a5a8-fcd91aac4e65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05663eed-3e5c-48ae-abf3-ce0692ab6d00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4605,7 +4957,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# **10. Try and Except**"
+    "# **15. Exceptions: Try and Except**"
    ]
   },
   {
@@ -4717,7 +5069,9 @@
   {
    "cell_type": "markdown",
    "id": "c3c28610-c6e7-408d-bb33-ffc1dd07656a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "\n",
     "### **User-Defined Exceptions**\n",
@@ -4768,12 +5122,104 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d1f2a488-9dc3-49e6-a436-9462cb96c2b5",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **16. Files in python**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f551e9f3-4f0c-436a-8c74-a892f1d873f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f69aed14-8c27-485f-a91b-fa73c7936d4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a45e852c-1328-4039-8ef7-de58980bcca8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e18e4aa-f20a-4be9-a2c4-9c1ab1f02bb9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# **17. Regular expressions in python**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ce661d5-16c7-405d-a376-93a0587e3351",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f5f53b4-4a69-495e-9572-97fc92a5aeb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33f61004-8b46-4f7a-9742-da99e2aec2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b20ad97a-bdb2-42b1-a57f-3139d9133911",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd868e9-8ae0-4233-b2f3-741531b580c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb930f01-72fa-4cf0-a9b3-65b1749b6b14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "22b3b2fa-76df-40c3-ac4a-bc961d00301d",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# **11. Libraries - Numpy and Pandas**"
+    "# **18. Libraries - Numpy and Pandas**"
    ]
   },
   {
@@ -5094,7 +5540,7 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# **12. Matplotlib and Seaborn**"
+    "# **19. Matplotlib and Seaborn**"
    ]
   },
   {
@@ -5558,7 +6004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
