--- a/Demo2.ipynb
+++ b/Demo2.ipynb
@@ -642,11 +642,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "3b47c4c2-d94c-4b85-bcbc-0066d6708170",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Important package \n",
     "import numpy as np"
    ]
   },
@@ -683,24 +684,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2393cef5-11ff-4f51-87e9-5c8f41ea91d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "''' python skfjdhslh;osj\n",
+    "Programmingfahglrhsvkah\\\n",
+    "gsdhbk\n",
+    "afgjshglsvh\n",
+    "dshgligh\n",
+    "'''\n",
+    "\n",
+    "print(\"Python\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f77cbc2d-f0b7-410a-afa8-abbbe1ecf631",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 5 \n",
+    "b = a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e7aa6299-92dc-4168-8665-e802560a5099",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "252e14d3-c934-4b35-913a-99324b58d6cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d5b6cc23-7764-4a31-88fe-c92242a6d4be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4333529520"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d50dc304-a10e-4ab8-b5d6-850d905631cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4333529520"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fce18a81-b24a-4e34-ac54-d5ae53ff720e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7862411a-a934-404b-aa45-cc5846ced02a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = 4.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "653828bf-4cf0-45c3-82c3-984e100ff309",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fb44f994-968a-492a-90eb-af5310d957f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = \"python\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f029fb4c-04b2-4a4e-b78b-5c70a52c4b3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "9cb678e6-df2e-4381-b9f5-021aad68c5f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = 3 + 4j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "49e3b0e3-aa9f-4e14-b47b-ddcaeda8aa20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "64fd3027-d6b3-40e4-b5a8-279e77058fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "68e50f03-b10a-4bb4-a0b8-0dde3e0684c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "437fbfae-6a80-4ca5-8817-165d8a7c8267",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "33b0acf4-0131-418e-938e-9253289eaaa0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(var)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7aa6299-92dc-4168-8665-e802560a5099",
+   "id": "864c2760-082d-4e3e-a031-9f55e3754d3e",
    "metadata": {},
    "outputs": [],
    "source": []
